0.7.0: RC1
     - added folder redirect feature for disabled file/folder management requested by Laurent Bardi <Laurent.Bardi@ipbs.fr>
     - added (incomplete) french translatations for the Web interface (thanx Laurent Bardi <Laurent.Bardi@ipbs.fr>)
     - added sysinfo feature (GET)
     - Web interface:
         - added new file feature (GET/POST)
	 - added edit feature (GET/POST)
	 - moved translations to separate .msg files (GET)
         - moved CSS and javascript to separte files (GET/HEAD)
         - added properties viewer switch (GET)
         - added sidebar view (GET)
         - improved page navigation (GET)
         - changed message box behavior (GET)
         - added file/folder name filtering feature (GET)
         - added $ORDER config parameter (GET)
         - improved folder list sort with cookies (GET)
         - fixed sort bug in search results (GET)
         - fixed selection not higlighted after back button pressed bug using Chrom(e/ium) browser (GET)
         - fixed annoying whitespace wraps (GET)
         - fixed wrong message display for change location/bookmark usage (GET)
         - fixed 'go up' on root folder bug (GET)
         - added file action column (GET)
	 - fixed icon for empty file bug ((GET)
     - fixed major quota bug (GET, PROPFIND)
     - fixed file/folder search performance bug in a AFS (GET)
     - fixed major CardDAV/CalDAV multiget report bugs reported by Steve Waterworth <s@steveww.org> (REPORT)
     - fixed major CardDAV/CalDAV empty query report bug (REPORT)
0.6.1: 2011/25/02
     - fixed missing HTTP status of inaccessible files (GET)
     - changed CONFIGFILE default 
     - fixed major AFS performance bug related to AFS ACL rights: list without read right on a folder with unreadable files (GET/PROPFIND)
     - Web interface:
         - fixed MIME sorting bug (GET)
         - added ascending/descending order character to the column name (GET)
         - fixed POST upload permission denied error message (POST)